# ic-approx

./: Cargo.toml
plot/: main.py  pyproject.toml
src/: dmp.rs  graph.rs  ic_model.rs  lib.rs  main.rs  sss.rs
src/taylor/: mod.rs
test/: sample.sh
test/sample-result/: facebook-1-1_error.csv  facebook-1-1_time.csv  facebook-1-2_error.csv  facebook-1-2_time.csv  facebook-1-3_error.csv  facebook-1-3_time.csv  facebook-2-1_error.csv  facebook-2-1_time.csv  facebook-2-2_error.csv  facebook-2-2_time.csv  facebook-2-3_error.csv  facebook-2-3_time.csv  facebook-3-1_error.csv  facebook-3-1_time.csv  facebook-3-2_error.csv  facebook-3-2_time.csv  facebook-3-3_error.csv  facebook-3-3_time.csv  facebook-4-1_error.csv  facebook-4-1_time.csv  facebook-4-2_error.csv  facebook-4-2_time.csv  facebook-4-3_error.csv  facebook-4-3_time.csv  facebook-5-1_error.csv  facebook-5-1_time.csv  facebook-5-2_error.csv  facebook-5-2_time.csv  facebook-5-3_error.csv  facebook-5-3_time.csv  twitter-1-1_error.csv  twitter-1-1_time.csv  twitter-1-2_error.csv  twitter-1-2_time.csv  twitter-1-3_error.csv  twitter-1-3_time.csv  twitter-2-1_error.csv  twitter-2-1_time.csv  twitter-2-2_error.csv  twitter-2-2_time.csv  (+20 more)
