[package]
name = "ic-approx"
version = "0.1.0"
edition = "2024"

[dependencies]
faer = "0.24.0"
rand = "0.10.0"
bitvec = "1.0.1"
rayon = "1.11.0"
rand_xoshiro = "0.8.0"
bpaf = { version = "0.9.24", features = ["derive"] }
anyhow = "1.0.102"
flate2 = "1.1.9"

[profile.dev.package.faer]
opt-level = 3
