[project]
name = "plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "altair-viewer>=0.4.0",
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "polars>=1.39.3",
    "vl-convert-python>=1.9.0.post1",
]
